--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -6,126 +6,126 @@ on:
       - dev
 
 jobs:
-#
-#  semantic_release_next_version:
-#    name: Next version
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v4
-#      - uses: actions/setup-node@v4
-#        with:
-#          cache: npm
-#          node-version: lts/Iron
-#      - run: npm install
-#      - run: npx semantic-release --dry-run
-#        id: semantic_release
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#      - uses: actions/upload-artifact@v4
-#        with:
-#          name: semantic-release-dev
-#          path: |
-#            Cargo.toml
-#            pyproject.toml
-#          retention-days: 1
-#    outputs:
-#      version: ${{ steps.semantic_release.outputs.version }}
-#
-#  test_rust:
-#    name: Build Rust
-#    needs: semantic_release_next_version
-#    if: needs.semantic_release_next_version.outputs.version != ''
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v4
-#      - uses: actions-rust-lang/setup-rust-toolchain@v1
-#        with:
-#          toolchain: stable
-#      - run:
-#            cargo test --release --all-features
+
+  semantic_release_next_version:
+    name: Next version
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          cache: npm
+          node-version: lts/Iron
+      - run: npm install
+      - run: npx semantic-release --dry-run
+        id: semantic_release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/upload-artifact@v4
+        with:
+          name: semantic-release-dev
+          path: |
+            Cargo.toml
+            pyproject.toml
+          retention-days: 1
+    outputs:
+      version: ${{ steps.semantic_release.outputs.version }}
+
+  test_rust:
+    name: Build Rust
+    needs: semantic_release_next_version
+    if: needs.semantic_release_next_version.outputs.version != ''
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions-rust-lang/setup-rust-toolchain@v1
+        with:
+          toolchain: stable
+      - run:
+            cargo test --release --all-features
 
 
-#  build_linux:
-##    needs: test_rust
-#    runs-on: ${{ matrix.platform.runner }}
-#    strategy:
-#      matrix:
-#        platform:
-#          - runner: ubuntu-latest
-#            target: x86_64
-#        python-version:
-#          - '3.8'
+  build_linux:
+    needs: test_rust
+    runs-on: ${{ matrix.platform.runner }}
+    strategy:
+      matrix:
+        platform:
+          - runner: ubuntu-latest
+            target: x86_64
+        python-version:
+          - '3.8'
 #          - '3.9'
 #          - '3.10'
 #          - '3.11'
 #          - '3.12'
-#    steps:
-#      - uses: actions/checkout@v4
-##      - uses: actions/download-artifact@v4
-##        with:
-##          name: semantic-release-dev
-#      - uses: actions/setup-python@v5
-#        with:
-#          python-version: ${{ matrix.python-version }}
-#      - name: Build wheel
-#        uses: PyO3/maturin-action@v1
-#        with:
-#          target: ${{ matrix.platform.target }}
-#          args: --release --out dist -j 1 --all-features --strip --interpreter python${{ matrix.python-version }}
-#          sccache: 'true'
-#          manylinux: auto
-#      - name: Test wheel
-#        run: |
-#          echo "((A:1,B:2):1,(C:1,(D:3,E:4):2):2);" > test.tree
-#          python -m pip install dendropy
-#          python -m pip install dist/*.whl --force-reinstall
-#          python -c "from phylodm import PhyloDM; PhyloDM.load_from_newick_path('test.tree')"
-#      - name: Upload wheels
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: wheels-linux-${{ matrix.platform.runner }}-${{ matrix.platform.target }}-${{ matrix.python-version }}
-#          path: dist
-#          retention-days: 1
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
+        with:
+          name: semantic-release-dev
+      - uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Build wheel
+        uses: PyO3/maturin-action@v1
+        with:
+          target: ${{ matrix.platform.target }}
+          args: --release --out dist -j 1 --all-features --strip --interpreter python${{ matrix.python-version }}
+          sccache: 'true'
+          manylinux: auto
+      - name: Test wheel
+        run: |
+          echo "((A:1,B:2):1,(C:1,(D:3,E:4):2):2);" > test.tree
+          python -m pip install dendropy
+          python -m pip install dist/*.whl --force-reinstall
+          python -c "from phylodm import PhyloDM; PhyloDM.load_from_newick_path('test.tree')"
+      - name: Upload wheels
+        uses: actions/upload-artifact@v4
+        with:
+          name: wheels-linux-${{ matrix.platform.runner }}-${{ matrix.platform.target }}-${{ matrix.python-version }}
+          path: dist
+          retention-days: 1
 
-#  musllinux:
-#    needs: test_rust
-#    runs-on: ${{ matrix.platform.runner }}
-#    strategy:
-#      matrix:
-#        platform:
-#          - runner: ubuntu-latest
-#            target: x86_64
-#        python-version:
-#          - '3.8'
+  musllinux:
+    needs: test_rust
+    runs-on: ${{ matrix.platform.runner }}
+    strategy:
+      matrix:
+        platform:
+          - runner: ubuntu-latest
+            target: x86_64
+        python-version:
+          - '3.8'
 #          - '3.9'
 #          - '3.10'
 #          - '3.11'
 #          - '3.12'
-#    steps:
-#      - uses: actions/checkout@v4
-#      - uses: actions/download-artifact@v4
-#        with:
-#          name: semantic-release-dev
-#      - uses: actions/setup-python@v5
-#        with:
-#          python-version: ${{ matrix.python-version }}
-#      - name: Build wheel
-#        uses: PyO3/maturin-action@v1
-#        with:
-#          target: ${{ matrix.platform.target }}
-#          args: --release --out dist -j 1 --all-features --strip --interpreter python${{ matrix.python-version }}
-#          sccache: 'true'
-#          manylinux: musllinux_1_2
-#      - name: Upload wheels
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: wheels-musllinux-${{ matrix.platform.runner }}-${{ matrix.platform.target }}-${{ matrix.python-version }}
-#          path: dist
-#          retention-days: 1
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
+        with:
+          name: semantic-release-dev
+      - uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Build wheel
+        uses: PyO3/maturin-action@v1
+        with:
+          target: ${{ matrix.platform.target }}
+          args: --release --out dist -j 1 --all-features --strip --interpreter python${{ matrix.python-version }}
+          sccache: 'true'
+          manylinux: musllinux_1_2
+      - name: Upload wheels
+        uses: actions/upload-artifact@v4
+        with:
+          name: wheels-musllinux-${{ matrix.platform.runner }}-${{ matrix.platform.target }}-${{ matrix.python-version }}
+          path: dist
+          retention-days: 1
 
 
   windows:
-    #    needs: test_rust
+    needs: test_rust
     runs-on: ${{ matrix.platform.runner }}
     strategy:
       matrix:
@@ -140,9 +140,9 @@ jobs:
 #          - '3.12'
     steps:
       - uses: actions/checkout@v4
-      #      - uses: actions/download-artifact@v4
-      #        with:
-      #          name: semantic-release-dev
+      - uses: actions/download-artifact@v4
+        with:
+          name: semantic-release-dev
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
@@ -165,72 +165,107 @@ jobs:
           path: dist
           retention-days: 1
 
-#  osx:
-#    needs: test_rust
-#    runs-on: ${{ matrix.platform.runner }}
-#    strategy:
-#      matrix:
-#        platform:
-#          - runner: macos-12
-#            target: x86_64
-#          - runner: macos-14
-#            target: aarch64
-#        python-version:
-#          - '3.8'
+  osx:
+    needs: test_rust
+    runs-on: ${{ matrix.platform.runner }}
+    strategy:
+      matrix:
+        platform:
+          - runner: macos-12
+            target: x86_64
+          - runner: macos-14
+            target: aarch64
+        python-version:
+          - '3.8'
 #          - '3.9'
 #          - '3.10'
 #          - '3.11'
 #          - '3.12'
-#    steps:
-#      - uses: actions/checkout@v4
-#            - uses: actions/download-artifact@v4
-#              with:
-#                name: semantic-release-dev
-#      - uses: actions/setup-python@v5
-#        with:
-#          python-version: ${{ matrix.python-version }}
-#      - name: Build wheel
-#        uses: PyO3/maturin-action@v1
-#        with:
-#          target: ${{ matrix.platform.target }}
-#          args: --release --out dist -j 1 --all-features --strip --interpreter python${{ matrix.python-version }}
-#          sccache: 'true'
-#      - name: Test wheel
-#        run: |
-#          echo "((A:1,B:2):1,(C:1,(D:3,E:4):2):2);" > test.tree
-#          python -m pip install dendropy
-#          python -m pip install dist/*.whl --force-reinstall
-#          python -c "from phylodm import PhyloDM; PhyloDM.load_from_newick_path('test.tree')"
-#      - name: Upload wheels
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: wheels-osx-${{ matrix.platform.runner }}-${{ matrix.platform.target }}-${{ matrix.python-version }}
-#          path: dist
-#          retention-days: 1
+    steps:
+      - uses: actions/checkout@v4
+            - uses: actions/download-artifact@v4
+              with:
+                name: semantic-release-dev
+      - uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Build wheel
+        uses: PyO3/maturin-action@v1
+        with:
+          target: ${{ matrix.platform.target }}
+          args: --release --out dist -j 1 --all-features --strip --interpreter python${{ matrix.python-version }}
+          sccache: 'true'
+      - name: Test wheel
+        run: |
+          echo "((A:1,B:2):1,(C:1,(D:3,E:4):2):2);" > test.tree
+          python -m pip install dendropy
+          python -m pip install dist/*.whl --force-reinstall
+          python -c "from phylodm import PhyloDM; PhyloDM.load_from_newick_path('test.tree')"
+      - name: Upload wheels
+        uses: actions/upload-artifact@v4
+        with:
+          name: wheels-osx-${{ matrix.platform.runner }}-${{ matrix.platform.target }}-${{ matrix.python-version }}
+          path: dist
+          retention-days: 1
 
 
-#  sdist:
-#    needs: test_rust
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v4
-#      - uses: actions/download-artifact@v4
+  sdist:
+    needs: test_rust
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
+        with:
+          name: semantic-release-dev
+      - name: Build wheel
+        uses: PyO3/maturin-action@v1
+        with:
+          command: sdist
+          args: --out dist
+      - name: Test dist
+        run: |
+          echo "((A:1,B:2):1,(C:1,(D:3,E:4):2):2);" > test.tree
+          python -m pip install dendropy
+          python -m pip install dist/*.tar.gz --force-reinstall
+          python -c "from phylodm import PhyloDM; PhyloDM.load_from_newick_path('test.tree')"
+      - name: Upload wheels
+        uses: actions/upload-artifact@v4
+        with:
+          name: wheels-sdist
+          path: dist
+          retention-days: 1
+
+
+  semantic_release_publish:
+    name: Publish to GitHub
+    needs: [build_linux, musllinux, windows, osx, sdist]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+#      - uses: actions/setup-node@v4
 #        with:
-#          name: semantic-release-dev
-#      - name: Build wheel
-#        uses: PyO3/maturin-action@v1
+#          cache: npm
+#          node-version: lts/Iron
+#      - run: npm install
+#      - run: npx semantic-release
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
+  upload_pypi:
+    name: Publish to PyPI
+    needs: [semantic_release_publish]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          path: dist
+          pattern: wheels-*
+          merge-multiple: true
+      - name: Display structure of downloaded files
+        run: ls -R && ls -R dist
+
+#      - uses: pypa/gh-action-pypi-publish@release/v1
 #        with:
-#          command: sdist
-#          args: --out dist
-#      - name: Test dist
-#        run: |
-#          echo "((A:1,B:2):1,(C:1,(D:3,E:4):2):2);" > test.tree
-#          python -m pip install dendropy
-#          python -m pip install dist/*.tar.gz --force-reinstall
-#          python -c "from phylodm import PhyloDM; PhyloDM.load_from_newick_path('test.tree')"
-#      - name: Upload wheels
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: wheels-sdist
-#          path: dist
-#          retention-days: 1
+#          user: __token__
+#          password: ${{ secrets.PYPI_TOKEN }}
